--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.52.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
