Componente de Loading añadido

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^0.0.0-insiders.ff41b27",
+    "@material-tailwind/react": "^2.1.9",
     "@react-google-maps/api": "^2.19.3",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
